--- a/ChessTournament/src/FirstRoundFrame.form
+++ b/ChessTournament/src/FirstRoundFrame.form
@@ -27,55 +27,71 @@
           <Group type="102" alignment="1" attributes="0">
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="0" pref="148" max="32767" attributes="0"/>
-                      <Component id="jLabel1" min="-2" pref="309" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="PLAYER_4" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="PLAYER_6" min="-2" max="-2" attributes="0"/>
-                                  <Component id="PLAYER_5" min="-2" max="-2" attributes="0"/>
-                                  <Component id="PLAYER__2" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="PLAYER__1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="PLAYER__2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="PLAYER_6" min="-2" max="-2" attributes="0"/>
+                                          <Component id="PLAYER_5" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
                               </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="128" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="PLAYER_10" min="-2" max="-2" attributes="0"/>
-                                  <Component id="PLAYER_11" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel1" pref="321" max="32767" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Component id="PLAYER_11" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Component id="PLAYER_12" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" attributes="0">
+                                      <Component id="PLAYER_10" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Component id="PLAYER_9" min="-2" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="PLAYER_9" min="-2" max="-2" attributes="0"/>
-                          <Component id="PLAYER_12" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                              <Component id="PLAYER_3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="PLAYER_7" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="PLAYER_8" alignment="1" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="PLAYER_8" min="-2" max="-2" attributes="0"/>
-                  <Component id="PLAYER_7" min="-2" max="-2" attributes="0"/>
-                  <Component id="PLAYER_4" min="-2" max="-2" attributes="0"/>
-                  <Component id="PLAYER_3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
           </Group>
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="249" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="PLAYER_2" min="-2" max="-2" attributes="0"/>
                           <Component id="PLAYER_1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="232" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="226" max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" pref="129" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -95,24 +111,31 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PLAYER_9" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="PLAYER_10" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="PLAYER_9" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PLAYER_4" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="PLAYER__2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="PLAYER_4" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="PLAYER_1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="PLAYER_2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="PLAYER_5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="PLAYER_7" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="PLAYER_5" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="PLAYER_7" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="PLAYER_2" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="33" max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="PLAYER_11" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="PLAYER_12" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -138,106 +161,82 @@
         <Property name="text" type="java.lang.String" value="CAS CHESS TOURNAMENT"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER__2">
+    <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER__2"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PLAYER__2ActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_5">
-      <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_5"/>
+        <Property name="text" type="java.lang.String" value="SAVE"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_6">
+    <Component class="javax.swing.JButton" name="PLAYER__1">
       <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_6"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_4">
-      <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_4"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_7">
-      <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_7"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PLAYER_7ActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_8">
-      <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_8"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER__1">
-      <Properties>
-        <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="PLAYER__1"/>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
-        <Property name="actionCommand" type="java.lang.String" value="&lt;Not Set&gt;"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PLAYER__1ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_10">
+    <Component class="javax.swing.JButton" name="PLAYER__2">
       <Properties>
-        <Property name="editable" type="boolean" value="false"/>
+        <Property name="text" type="java.lang.String" value="PLAYER__2"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="PLAYER_5">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="PLAYER_5"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="PLAYER_6">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="PLAYER_6"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="PLAYER_10">
+      <Properties>
         <Property name="text" type="java.lang.String" value="PLAYER_10"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_11">
+    <Component class="javax.swing.JButton" name="PLAYER_11">
       <Properties>
-        <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="PLAYER_11"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_12">
+    <Component class="javax.swing.JButton" name="PLAYER_3">
       <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_12"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_9">
-      <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_9"/>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_3">
-      <Properties>
-        <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="PLAYER_3"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_2">
+    <Component class="javax.swing.JButton" name="PLAYER_4">
       <Properties>
-        <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="PLAYER_2"/>
+        <Property name="text" type="java.lang.String" value="PLAYER_4"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="PLAYER_1">
+    <Component class="javax.swing.JButton" name="PLAYER_7">
       <Properties>
-        <Property name="editable" type="boolean" value="false"/>
+        <Property name="text" type="java.lang.String" value="PLAYER_7"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="PLAYER_8">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="PLAYER_8"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="PLAYER_9">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="PLAYER_9"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="PLAYER_12">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="PLAYER_12"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="PLAYER_1">
+      <Properties>
         <Property name="text" type="java.lang.String" value="PLAYER_1"/>
-        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="PLAYER_2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="SAVE"/>
+        <Property name="text" type="java.lang.String" value="PLAYER_2"/>
       </Properties>
     </Component>
   </SubComponents>
